# cpp-project

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  conanfile.txt
.github/scripts/: install.sh
.github/workflows/: cmake-single-platform.yml
src/: log.hpp  main.cpp
test/: class.cpp  enum.cpp  helloworld.cpp  helloworld.hpp  ternery.cpp  vec.cpp
